--- a/resources/manifest.json
+++ b/resources/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "dwv-jqmobile",
   "short_name": "dwv-jqmobile",
-  "description": "Medical viewer using DWV and jQuery Mobile.",
+  "description": "Medical viewer using DWV (DICOM Web Viewer) and jQuery Mobile.",
   "start_url": "/dwv-jqmobile/demo/trunk/index.html",
   "display": "standalone",
   "background_color": "#3E4EB8",
