Fix missing semi-colon.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ env:
 after_success:
 # update gh-page only for master
 - if [ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
-    chmod +x ./resources/scripts/update-gh-pages.sh
-    "./resources/scripts/update-gh-pages.sh"
+    chmod +x ./resources/scripts/update-gh-pages.sh;
+    "./resources/scripts/update-gh-pages.sh";
   else
     echo "Not deploying artifacts for $TRAVIS_BRANCH";
   fi
