Update publish task name. Add dev task.

--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "nprogress": "~0.2.0"
   },
   "devDependencies": {
+    "http-server": "^0.11.1",
     "grunt": "~1.0.1",
     "grunt-cli": "~1.2",
     "grunt-contrib-jshint": "~1.1.0"
   },
   "scripts": {
-    "test": "grunt publish --verbose"
+    "dev": "http-server",
+    "test": "grunt test --verbose"
   }
 }
