Update package description.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dwv-jqmobile",
   "version": "0.1.0-beta",
-  "description": "Medical viewer using DWV and jQuery Mobile.",
+  "description": "Medical viewer using DWV (DICOM Web Viewer) and jQuery Mobile.",
   "keywords": [
     "DICOM",
     "medical",
