--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "display": "standalone",
   "background_color": "#3E4EB8",
   "theme_color": "#2F3BA2",
-  "start_url": "/dwv-jqmobile/demo/trunk",
+  "start_url": "/dwv-jqmobile/demo/trunk/index.html",
   "scope": "/dwv-jqmobile/demo/trunk",
   "icons": [{
       "src": "resources/icons/dwv-16.png",
