--- a/manifest.json
+++ b/manifest.json
@@ -7,29 +7,36 @@
   "theme_color": "#2F3BA2",
   "start_url": "/dwv-jqmobile/demo/trunk/index.html",
   "scope": "/dwv-jqmobile/demo/trunk",
-  "icons": [{
-      "src": "resources/icons/dwv-16.png",
+  "icons": [
+    {
+      "src": "resources/icons/icon-16.png",
       "sizes": "16x16",
       "type": "image/png"
-    }, {
-      "src": "resources/icons/dwv-32.png",
+    },
+    {
+      "src": "resources/icons/icon-32.png",
       "sizes": "32x32",
       "type": "image/png"
-    }, {
-      "src": "resources/icons/dwv-64.png",
+    },
+    {
+      "src": "resources/icons/icon-64.png",
       "sizes": "64x64",
       "type": "image/png"
-    }, {
-      "src": "resources/icons/dwv-128.png",
+    },
+    {
+      "src": "resources/icons/icon-128.png",
       "sizes": "128x128",
       "type": "image/png"
-    }, {
-      "src": "resources/icons/dwv-256.png",
+    },
+    {
+      "src": "resources/icons/icon-256.png",
       "sizes": "256x256",
       "type": "image/png"
-    }, {
-      "src": "resources/icons/dwv-512.png",
+    },
+    {
+      "src": "resources/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
-    }]
+    }
+  ]
 }
