--- a/demo/stable/package.json
+++ b/demo/stable/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dwv-jqmobile",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Medical viewer using DWV (DICOM Web Viewer) and jQuery Mobile.",
   "keywords": [
     "DICOM",
@@ -15,14 +15,14 @@
     "url": "git://github.com/ivmartel/dwv-jqmobile.git"
   },
   "dependencies": {
-    "dwv": "0.26.0",
+    "dwv": "0.27.0",
     "jquery": "~2.1.4",
     "nprogress": "~0.2.0"
   },
   "devDependencies": {
-    "grunt": "~1.0.1",
+    "grunt": "~1.1.0",
     "grunt-cli": "~1.3.1",
-    "grunt-contrib-connect": "~2.0.0",
+    "grunt-contrib-connect": "~2.1.0",
     "grunt-contrib-copy": "~1.0.0",
     "grunt-contrib-jshint": "~2.1.0",
     "grunt-contrib-watch": "~1.1.0"
@@ -30,6 +30,7 @@
   "scripts": {
     "start": "grunt start",
     "dev": "grunt dev",
+    "lint": "grunt lint",
     "test": "grunt test --verbose"
   }
 }
