--- a/demo/stable/manifest.json
+++ b/demo/stable/manifest.json
@@ -5,8 +5,8 @@
   "display": "standalone",
   "background_color": "#3E4EB8",
   "theme_color": "#2F3BA2",
-  "start_url": "/dwv-jqmobile/demo/stable/index.html",
-  "scope": "/dwv-jqmobile/demo/stable",
+  "scope": ".",
+  "start_url": "index.html",
   "icons": [
     {
       "src": "resources/icons/icon-16.png",
