--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "grunt-cli": "~1.3.1",
     "grunt-contrib-connect": "~2.1.0",
     "grunt-contrib-copy": "~1.0.0",
-    "grunt-contrib-jshint": "~2.1.0",
-    "grunt-contrib-watch": "~1.1.0"
+    "grunt-contrib-watch": "~1.1.0",
+    "grunt-eslint": "~23.0.0"
   },
   "scripts": {
     "start": "grunt start",
