--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -7,6 +7,9 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      IS_PUSH_MASTER: ${{ github.ref == 'refs/heads/master' }}
+      IS_PUSH_TAG: ${{ startsWith(github.ref, 'refs/tags/') }}
     steps:
     - name: Check out code
       uses: actions/checkout@v2
@@ -20,22 +23,27 @@ jobs:
       run: yarn install --frozen-lockfile
     - name: Run lint
       run: yarn run lint
-    - name: Build (if master branch)
-      if: github.ref == 'refs/heads/master'
+    - name: Build (if tag or master branch)
+      if: env.IS_PUSH_MASTER == 'true' || env.IS_PUSH_TAG == 'true'
       run: |
         rm -Rf ./node_modules/*
         yarn install --prod
         mkdir build
         cp -Rf *.* ./build
         cp -Rf src css ext node_modules resources ./build
-    - name: Push to gh-pages (if master branch)
-      if: github.ref == 'refs/heads/master'
+    - name: Push to gh-pages (if tag or master branch)
+      if: env.IS_PUSH_MASTER == 'true' || env.IS_PUSH_TAG == 'true'
       run: |
+        DEPLOY_DIR=./demo/trunk
+        if ${{ env.IS_PUSH_TAG }}; then
+          DEPLOY_DIR=./demo/stable
+        fi
         git config user.email github-actions@github.com
         git config user.name github-actions
         git checkout gh-pages
-        rm -Rf ./demo/trunk/*
-        cp -Rf ./build/* ./demo/trunk
-        git add ./demo/trunk/*
-        git diff-index --quiet HEAD || git commit -m "CI run ${{ github.run_number }} pushed to gh-pages"
+        rm -Rf $DEPLOY_DIR'/*'
+        cp -Rf ./build/* $DEPLOY_DIR
+        git add $DEPLOY_DIR'/*'
+        git diff-index --quiet HEAD ||
+          git commit -m "CI run ${{ github.run_number }} pushed to gh-pages"
         git push -fq origin gh-pages
