--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
   },
   "dependencies": {
     "dwv": "0.28.1",
-    "jquery": "~2.1.4",
-    "nprogress": "~0.2.0"
+    "jquery": "2.1.4",
+    "nprogress": "^0.2.0"
   },
   "devDependencies": {
-    "grunt": "~1.3.0",
-    "grunt-cli": "~1.4.1",
-    "grunt-contrib-connect": "~3.0.0",
-    "grunt-contrib-copy": "~1.0.0",
-    "grunt-contrib-watch": "~1.1.0",
-    "grunt-eslint": "~23.0.0"
+    "grunt": "^1.4.0",
+    "grunt-cli": "^1.4.2",
+    "grunt-contrib-connect": "^3.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-eslint": "^23.0.0"
   },
   "scripts": {
     "start": "grunt start",
