--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      IS_PUSH_MASTER: ${{ github.ref == 'refs/heads/master' }}
+      IS_PUSH_MAIN: ${{ github.ref == 'refs/heads/main' }}
       IS_PUSH_TAG: ${{ startsWith(github.ref, 'refs/tags/') }}
     steps:
     - name: Check out code
@@ -23,16 +23,16 @@ jobs:
       run: yarn install --frozen-lockfile
     - name: Run lint
       run: yarn run lint
-    - name: Build (if tag or master branch)
-      if: env.IS_PUSH_MASTER == 'true' || env.IS_PUSH_TAG == 'true'
+    - name: Build (if tag or main branch)
+      if: env.IS_PUSH_MAIN == 'true' || env.IS_PUSH_TAG == 'true'
       run: |
         rm -Rf ./node_modules/*
         yarn install --prod
         mkdir build
         cp -Rf *.* ./build
         cp -Rf src css ext node_modules resources ./build
-    - name: Push to gh-pages (if tag or master branch)
-      if: env.IS_PUSH_MASTER == 'true' || env.IS_PUSH_TAG == 'true'
+    - name: Push to gh-pages (if tag or main branch)
+      if: env.IS_PUSH_MAIN == 'true' || env.IS_PUSH_TAG == 'true'
       run: |
         DEPLOY_DIR=./demo/trunk
         if ${{ env.IS_PUSH_TAG }}; then
