--- a/package.json
+++ b/package.json
@@ -23,17 +23,19 @@
     "nprogress": "^0.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.4.0",
+    "@stylistic/eslint-plugin-js": "^2.1.0",
+    "eslint": "^9.4.0",
+    "globals": "^15.4.0",
     "grunt": "^1.4.0",
     "grunt-cli": "^1.4.2",
     "grunt-contrib-connect": "^4.0.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-eslint": "^24.0.0"
+    "grunt-contrib-watch": "^1.1.0"
   },
   "scripts": {
     "start": "grunt start",
     "dev": "grunt dev",
-    "lint": "grunt lint",
-    "test": "grunt test --verbose"
+    "lint": "eslint 'src/**/*.js' '*.js'"
   }
 }
